# ma-w2-efw2-generator

./: .gitignore  LICENSE  README.md  index.html
service/: README.md  app.py  pyproject.toml
